# vegaplex-v2

./: .gitignore  DEPLOY.md  README.md  render.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  start.bat
backend/EarningsEdgeDetection/: unix_setup.sh  win_setup.bat
backend/EarningsEdgeDetection/cli_scanner/core/: analyzer.py  scanner.py
backend/analytics/: backtester.py  bs_greeks.py  combo_optimizer.py  config.example.json  dashboard_helpers.py  data_fetcher.py  earnings_adapter.py  ibkr_fetcher.py  macro_event_vol.py  opportunity_scanner.py  regime_classifier.py  seed_massive.py  seed_polygon.py  seed_skew_history.py  seed_vix_futures.py  skew_analyzer.py  skew_history.py  trade_structures.py  tradier_fetcher.py  universe_config.json  visualizer.py  vix_futures_engine.py  vix_pca.py  vol_skew_scanner.py  volatility_surface.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: auth.py  errors.py  events.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: admin.py  auth.py  broker.py  earnings.py  macro_events.py  radar.py  regime.py  scan.py  scheduler.py  skew_arb.py  surface.py  vix.py
backend/app/services/: chart_service.py  earnings_service.py  scan_service.py  scheduler_service.py  vix_service.py
backend/scripts/: check_today_iv.py  inspect_day_aggs.py  inspect_quotes.py  probe_futures.py  probe_paths.py  test_massive.py
frontend/: .env.production.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  (+1 more)
(+41 files in other folders)
