[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vegaplex-backend"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Analytics (ported from v1)
    "yfinance>=0.2.38",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    # Options / market data
    "ib_insync>=0.9.86",
    "requests>=2.31.0",

    # Database
    "aiosqlite>=0.20.0",

    # Polygon seeder (optional)
    "polygon-api-client>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "analytics*"]
